# OpenApi/trainingHub.yaml
@@ -34,36 +34,36 @@ paths:
                 items:
                   $ref: '#/components/schemas/Course'
   /getCourseByKeyword/{keyword}:
-   get:
-    tags:
-     - course
-    summary: Gets courses using keywords
-    description: gets all courses in the database using keywords
-    operationId: Keyword
-    parameters:
+    get:
+      tags:
+        - course
+      summary: Gets courses using keywords
+      description: gets all courses in the database using keywords
+      operationId: Keyword
+      parameters:
         - name: keyword
           in: path
           description: All keywords which are related to the course
           required: true
           schema:
             type: string
-    responses:
-     '200':
-       description: successful operation
-       content:
-         application/json:
-           schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/Course'
-         application/xml:
-            schema:
-               type: array
-               items:
-                $ref: '#/components/schemas/Course'
-     '404':
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Course'
+            application/xml:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Course'
+        '404':
           description: Course not found
-          
+
   /getCourseById/{courseId}:
     get:
       tags:
@@ -103,8 +103,10 @@ paths:
           description: Category of the courses to retrieve
           required: true
           schema:
-            type: enum
-            format: int64
+            enum:
+              - Beginner
+              - Intermediate
+              - Professional
       responses:
         '200':
           description: Successful operation
@@ -112,8 +114,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Course'
-        '404':
-          description: Invalid Category 
+        '400':
+          description: Invalid Category
 
   /addCourse:
     post:
@@ -128,12 +130,14 @@ paths:
             schema:
               $ref: '#/components/schemas/Course'
       responses:
-        '200':
+        '201':
           description: Course added successfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Course'
+        '400':
+          description: Invalid Input
 
   /updateCourse/{courseId}:
     patch:
@@ -154,7 +158,7 @@ paths:
             schema:
               $ref: '#/components/schemas/Course'
       responses:
-        '200':
+        '201':
           description: Course edited successfully
           content:
             application/json:
@@ -162,6 +166,8 @@ paths:
                 $ref: '#/components/schemas/Course'
         '404':
           description: Course not found
+        '400':
+          description: Invalid Input
 
   /deleteCourse/{courseId}:
     delete:
@@ -176,7 +182,7 @@ paths:
           schema:
             type: integer
       responses:
-        '204':
+        '200':
           description: Course deleted successfully
         '404':
           description: Course not found
@@ -186,7 +192,7 @@ paths:
     get:
       summary: Get all comments for a specific course
       tags:
-      - comment
+        - comment
       operationId: getAllComments
       parameters:
         - name: courseId
@@ -195,7 +201,7 @@ paths:
           schema:
             type: integer
       responses:
-        '206':
+        '200':
           description: Successful operation
           content:
             application/json:
@@ -205,7 +211,7 @@ paths:
               schema:
                 type: array
                 items:
-                 $ref: '#/components/schemas/Comment'
+                  $ref: '#/components/schemas/Comment'
 
 
   /addComment/{courseId}:
@@ -249,11 +255,11 @@ paths:
             type: integer
           example: 1
       responses:
-        '204':
+        '200':
           description: Comment deleted successfully
         '404':
           description: Comment not found
-          
+
 components:
   schemas:
     Course:
